--- a/administrador/templates/admin_pacientes.html
+++ b/administrador/templates/admin_pacientes.html
@@ -18,8 +18,10 @@
             <button type="button" id="clearButton" class="clear-button" style="display: none;">Limpiar Filtro</button>
         </div>
     </form>
+    <button id="boton-agregar-paciente">Agregar Paciente
+        <img src="{% static 'icons/plus.svg' %}">
+    </button>
 </div>
-<button id="boton-agregar-paciente">Agregar Paciente<img src="{% static 'icons/plus.svg' %}"></button>
 {% endblock %}
 
 {% block content %}
