--- a/terapeuta/templates/historial_paciente.html
+++ b/terapeuta/templates/historial_paciente.html
@@ -40,23 +40,25 @@
 
 {% block content %}
   <div class="contenedor-principal">
-    <!-- Sección superior con info del paciente y progreso -->
     <div class="contenedor-superior">
-      <div class="info-paciente">
-        <h2>{{ paciente.first_name }} {{ paciente.last_name }} | {{ paciente.rut }}</h2>
-        <div class="info-detalle">
+      <!-- Primera columna -->
+      <div class="nombre-paciente">
+          <h2>{{ paciente.first_name }} {{ paciente.last_name }} | {{ paciente.rut }}</h2>
+      </div>
+      <div class="detalles-paciente">
           <p>Edad: {{ paciente.edad }}</p>
           <p>Patología: {{ paciente.patologia }}</p>
-        </div>
-        <button class="progreso-paciente-btn" onclick="redirigirAGrafico({{ paciente.id }})">
-            <div class="progreso-paciente-content">
-                <h3>PROGRESO DEL PACIENTE</h3>
-                <span class="progreso-icono">
-                    <i class="fas fa-chart-bar"></i>
-                </span>
-            </div>
-        </button>
-    </div>
+      </div>
+      <!-- Segunda columna -->
+      <button class="progreso-paciente-btn" onclick="redirigirAGrafico({{ paciente.id }})">
+          <div class="progreso-paciente-content">
+              <h3>PROGRESO DEL PACIENTE</h3>
+              <span class="progreso-icono">
+                  <i class="fas fa-chart-bar"></i>
+              </span>
+          </div>
+      </button>
+  </div>
 
     <div class="contenedor-inferior">
       <div class="info-cita">
