Refactorice el css de los gráficos y desactive la interacción para ocultar la liinea de los graficos

--- a/terapeuta/templates/historial_paciente.html
+++ b/terapeuta/templates/historial_paciente.html
@@ -145,7 +145,7 @@
   <div class="contenido-modal">
     <span class="close">&times;</span>
     <h2 id="popup-titulo">Gráfico de Corriente vs Tiempo</h2>
-    <div id="chart_sesion" style="width: 100%; height: 400px;"></div>
+    <div id="chart_sesion"></div>
   </div>
 </div>
 
