--- a/terapeuta/static/css/historial_paciente.css
+++ b/terapeuta/static/css/historial_paciente.css
@@ -551,6 +551,11 @@
     transform: translate(-50%, -50%);
 }
 
+#chart_sesion {
+    width: 100%;
+    height: 400px;
+}
+
 .close {
     position: absolute;
     top: 7.5px; /* Ajusta la distancia desde la parte superior del modal */
@@ -643,4 +648,23 @@
     gap: 5px;
     margin: 0 auto;
     width: 80%;
+}
+
+@media screen and (max-width: 768px){
+    .contenido-modal {
+        width: 600px;
+        height: 400px;
+    }
+    
+    #chart_sesion {
+        width: 100%;
+        height: 300px;
+    }
+}
+
+@media screen and (max-width: 600px){
+    .contenido-modal {
+        width: 475px;
+        height: 400px;
+    }
 }
