--- a/terapeuta/static/css/calendar.css
+++ b/terapeuta/static/css/calendar.css
@@ -1,14 +1,14 @@
 
-/* Contenedor general del calendario */
 .calendar-container {
     background-color: white;
     border-radius: 5px;
-    padding-top: 150px;
-    height: 100vh;
+    padding: 20px; 
     display: flex;
     flex-direction: column;
     width: 100%;
     max-width: 1200px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+    margin-top: 20px;
 }
 
 .button-container {
