--- a/terapeuta/templates/perfil.html
+++ b/terapeuta/templates/perfil.html
@@ -1,9 +1,114 @@
 {% extends 'terapeuta_base.html' %}
+{% load static %}
 
 {% block title %}Mi Perfil{% endblock %}
 
+{% block extra_head %}
+<link rel="stylesheet" href="{% static 'css/perfil.css' %}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+<title>Perfil Terapeuta</title>
+{% endblock %}
+
 {% block content %}
-<div style="display: flex; justify-content: center; align-items: center; height: 80vh;">
-    <h1 style="font-size: 48px; font-weight: bold;">Mi Perfil</h1>
+<div class="profile-container">
+    <div class="profile-info">
+        <h1>{{ user.first_name }} {{ user.last_name }}</h1>
+        <p>{{ terapeuta.especialidad }}</p> 
+
+        <div class="presentation">
+            <h2>
+                Presentación
+                <i class="fas fa-pencil-alt edit-icon presentation-edit-icon" onclick="openPopup('edit-profile-popup')"></i>
+            </h2>
+            <p>{{ terapeuta.presentacion }}</p>
+        </div>
+    </div>
+
+    <div class="doctor-logo">
+        <svg class="svg-logo" xmlns="http://www.w3.org/2000/svg">
+            <path d="M25 25C32.8906 25 39.2857 19.4043 39.2857 12.5C39.2857 5.5957 32.8906 0 25 0C17.1094 0 10.7143 5.5957 10.7143 12.5C10.7143 19.4043 17.1094 25 25 25ZM11.6071 41.4062C11.6071 42.7051 12.8013 43.75 14.2857 43.75C15.7701 43.75 16.9643 42.7051 16.9643 41.4062C16.9643 40.1074 15.7701 39.0625 14.2857 39.0625C12.8013 39.0625 11.6071 40.1074 11.6071 41.4062ZM35.7143 28.1836V32.9688C39.7879 33.6914 42.8571 36.8555 42.8571 40.625V44.6973C42.8571 45.4395 42.2545 46.084 41.4174 46.2305L37.8237 46.8555C37.3437 46.9434 36.875 46.6699 36.7746 46.2402L36.4286 44.707C36.3281 44.2871 36.6406 43.8672 37.1317 43.7891L39.2857 43.4082V40.625C39.2857 34.4922 28.5714 34.2676 28.5714 40.8105V43.418L30.7254 43.7988C31.2054 43.8867 31.5179 44.2969 31.4286 44.7168L31.0826 46.25C30.9821 46.6699 30.5134 46.9434 30.0335 46.8652L26.5513 46.4551C25.6696 46.3477 25.0112 45.6934 25.0112 44.9023V40.625C25.0112 36.8555 28.0804 33.7012 32.154 32.9688V28.5547C31.9085 28.623 31.6629 28.6621 31.4174 28.7402C29.4085 29.3555 27.2545 29.6973 25.0112 29.6973C22.7679 29.6973 20.6138 29.3555 18.6049 28.7402C17.779 28.4863 16.942 28.3301 16.0826 28.2324V36.2012C18.6607 36.875 20.5469 38.9453 20.5469 41.416C20.5469 44.4336 17.7455 46.8848 14.2969 46.8848C10.8482 46.8848 8.04687 44.4336 8.04687 41.416C8.04687 38.9453 9.93303 36.875 12.5112 36.2012V28.3496C5.41295 29.3945 0 34.7461 0 41.25V45.625C0 48.0371 2.2433 50 5 50H45C47.7567 50 50 48.0371 50 45.625V41.25C50 34.2188 43.6607 28.5254 35.7143 28.1836Z"/>
+        </svg>
+
+        <div class="contact-info">
+            <h2>Contactos</h2>
+
+            <div class="contact-item">
+                <i class="fas fa-envelope"></i>
+                <p>{{ terapeuta.correo_contacto }}</p> 
+                <i class="fas fa-pencil-alt edit-icon" onclick="openPopup('edit-profile-popup')"></i>
+            </div>
+        </div>
+    </div>
 </div>
+
+<!-- Popup de Ediciones -->
+<!-- Popup de Ediciones -->
+<div id="edit-profile-popup" class="popup">
+    <div class="popup-content">
+        <span class="close" onclick="closePopup('edit-profile-popup')">&times;</span>
+        <h1 class="popup-title">Editar datos</h1>
+
+        <!-- Contenedor para mensajes de error -->
+        <div id="error-message" style="color: red;"></div>
+
+        <form id="edit-profile-form" method="POST" action="{% url 'editar_perfil' terapeuta.id %}">
+            {% csrf_token %}
+            
+            <!-- Sección para editar la presentación -->
+            <h2 class="popup-subtitle">Presentación</h2>
+            <textarea id="presentacion" name="presentacion" rows="4">{{ terapeuta.presentacion }}</textarea>
+            
+            <!-- Sección para editar los contactos -->
+            <h3 class="popup-subtitle">Contactos</h3>
+            
+            <div class="contact-inputs">
+                <div class="contact-item">
+                    <i class="fas fa-envelope"></i>
+                    <input type="email" name="correo_contacto" placeholder="Correo Electrónico" value="{{ terapeuta.correo_contacto }}">
+                </div>
+            </div>
+            <div class="popup-actions">
+                <button type="button" class="cancel-btn" onclick="closePopup('edit-profile-popup')">Cancelar</button>
+                <button type="submit" class="confirm-btn">Confirmar</button>
+            </div>
+        </form>
+    </div>
+</div>
+
+<script>
+
+document.addEventListener("DOMContentLoaded", function() {
+    {% if messages %}
+        let errorMessageContainer = document.getElementById('error-message');
+        errorMessageContainer.innerHTML = '';  // Limpiar mensajes de error previos
+
+        {% for message in messages %}
+            {% if message.tags == 'success' %}
+                Swal.fire({
+                    title: '¡Éxito al Guardar!',
+                    icon: 'success',
+                    confirmButtonText: 'Aceptar',
+                    confirmButtonColor: '#3085d6',
+                    background: '#f0f0f0',
+                    timer: 2000,
+                });
+                closePopup('edit-profile-popup'); // Cerrar popup si es éxito
+            {% elif message.tags == 'error' %}
+                // Mostrar mensaje de error dentro del popup
+                errorMessageContainer.innerHTML += '<p>{{ message }}</p>';
+                openPopup('edit-profile-popup'); // Asegurarse de que el popup permanezca abierto
+            {% endif %}
+        {% endfor %}
+    {% endif %}
+});
+
+
+function openPopup(popupId) {
+    document.getElementById(popupId).style.display = 'flex';
+}
+function closePopup(popupId) {
+    document.getElementById(popupId).style.display = 'none';
+}
+</script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 {% endblock %}
